Project3/force-app/main/default/objects/Skill_Assignment__c/Skill_Assignment__c.object-meta.xml
<CustomObject>
    <label>Skill Assignment</label>
    <nameField>
        <label>Skill Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SkillAssignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>