Project3/force-app/main/default/objects/Skill_Assignment__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>SkillAssignments</relationshipLabel>
    <relationshipName>SkillAssignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>