Project3/force-app/main/default/objects/Skill_Assignment__c/listViews/ViewSkillAssignmentForTask.listView-meta.xml
<ListView>
    <fullName>ViewSkillAssignmentForTask</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Level__c</columns>
    <columns>Skill__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Mine</filterScope>
    <label>ViewSkillAssignmentForTask</label>
</ListView>